gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file 
All the changes are usually noted in this file when they are checked
into the cvs repository.

7/2/99  Fixed the ./configure stuff dealing with libgdgeda so that it works
        when libgdgeda isn't installed in a system directory

7/1/99 	Removed the libgd #include from all files (not needed)

	Fixed some stuff in configure.in (typos)

6/26/99 Fixed a bug dealing with the font-directory/scheme-directory/etc...
	which broke opening up a second window

	Fixed a visual annoyance: Place lots of components and inbetween
	each place there would be a redraw.  Not necessary.  Fixed.

6/25/99 Added the rc keyword "image-color" which controls if image is 
	in color (enabled) or black and white (disabled)

	Added the start of mouse button pan.

	Added 'third-button' keyword to rc

	Added support to configure to look for optarg and friends otherwise
	include the right externs...

	Forgot to add the hotkey for Edit/Show Hidden Text

	Removed all traces of GTK_DEVEL

	Got mouse pan working, with the exception of the once it crashed my
	X server

6/24/99 Made the Image write dialog box go away once you pressed write

6/23/99 Added the first bits of support for the writing of images

	Added configure ability to find and turn off libgd support

	Added image-orientation keyword to control the future ability
	to write portrait and landscape images

6/19/99 Fixed a bug where you would select something and then visual
	cues would disappear when you hit redraw

6/10/99 Added support for this idea that hidden text is NOT created, main
	changes were in the hidding and unhidding of text items

5/31/99 Found a minor bug in move, not all nets were being redrawn

	Worked a bit more to reduce the flashing of nets/pins when a complex
	is moved
