@@ -31,7 +31,6 @@ B 12702 17199 800 800 3
 P 13500 17600 13700 17600 -1
 A 13020 17559 90 27 125 3
 A 13180 17641 90 207 125 3
-L 12900 17850 12900 17850 3
 V 13100 17600 250 3
 L 13400 17900 13300 17860 3
 L 13400 17900 13360 17800 3
@@ -102,7 +101,6 @@ B 16902 14299 800 800 3
 P 17700 14700 17900 14700 -1
 A 17220 14659 90 27 125 3
 A 17380 14741 90 207 125 3
-L 17100 14950 17100 14950 3
 V 17300 14700 250 3
 L 17600 15000 17500 14960 3
 L 17600 15000 17560 14900 3
@@ -210,9 +208,7 @@ B 12502 21199 800 800 3
 P 13300 21600 13500 21600 -1
 A 12820 21659 90 27 125 3
 A 12980 21741 90 207 125 3
-L 12700 21850 12700 21850 3
 V 12900 21700 200 3
-L 13150 21900 13150 21900 3
 B 12800 21320 200 60 3
 L 12840 21400 12960 21400 3
 L 12840 21300 12960 21300 3
