@@ -2732,18 +2732,13 @@ T 38100 22840 3 10 1 0 0
 C 18300 16500 1 0 0 EMBEDDEDzener-1.sym
 [
 L 18600 16900 18600 16500 3
-L 18600 16500 18600 16500 3
-L 18600 16500 18600 16500 3
 L 18900 16700 18600 16500 3
 L 18900 16700 18600 16900 3
 {
 T 18700 17100 5 10 0 0 0
 device=ZENER DIODE
 }
-L 18600 16900 18600 16900 3
 L 18900 16900 18900 16500 3
-L 18900 16500 18900 16500 3
-L 19200 16700 19200 16700 3
 P 19200 16700 19000 16700 -1
 {
 T 19000 16730 5 8 1 1 0
@@ -2754,7 +2749,6 @@ P 18500 16700 18300 16700 -1
 T 18400 16730 5 8 1 1 0
 pin1=1
 }
-P 18400 16600 18400 16600 -1
 L 19000 16700 18900 16700 3
 L 18600 16700 18500 16700 3
 L 18900 16900 18800 16900 3
@@ -5084,10 +5078,8 @@ device=VOLTAGE SOURCE
 }
 L 19100 14500 19150 14500 3
 L 19550 14500 19600 14500 3
-L 19350 14500 19350 14500 3
 L 19250 14500 19300 14550 3
 L 19350 14500 19300 14550 3
-L 19350 14500 19350 14500 3
 L 19450 14500 19400 14450 3
 L 19350 14500 19400 14450 3
 ]
