@@ -84,13 +84,6 @@ EDIT_SELECT
 T 29000 28100 3 10 1 0 0
 EDIT_MOVE
 B 22900 29800 2000 400 3
-B 24700 29900 0 0 3
-B 24700 29900 0 0 3
-B 24700 29900 0 0 3
-B 24700 29900 0 0 3
-B 24600 29900 0 0 3
-B 24600 29900 0 0 3
-B 24600 29900 0 0 3
 L 22900 30000 22100 30000 3
 L 22100 30000 22200 30100 3
 L 22100 30000 22200 29900 3
@@ -142,7 +135,6 @@ MOTION
 L 21900 20700 21300 20800 3
 L 21300 20800 21500 20900 3
 L 21300 20800 21500 20600 3
-L 21100 20600 21100 20600 3
 V 22750 20550 850 3
 {
 T 22100 20400 5 10 1 1 0
