@@ -9,6 +9,9 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+7/3/99 	Went through all same schematic and removed all zero length/etc...
+	objects
+
 7/2/99  Fixed the ./configure stuff dealing with libgdgeda so that it works
         when libgdgeda isn't installed in a system directory
 
